# Otsu-Threshold

./: CMakeLists.txt  README.md  otsu.cpp
